<resources>
    <string name="app_name">SHGSeller</string>
    <string name="hint_account">Account no.</string>
    <string name="hint_password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="invalid_password">Password should be at least 6 characters!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SHG-1</string>
    <string name="nav_header_subtitle">shg1@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_products">My Products</string>
    <string name="menu_orders">My Orders</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_terms">T&amp;C</string>
    <string name="menu_profile">Profile</string>
    <string name="spinner_prompt">Product category</string>

    <string-array name="product_categories">
        <item>Handicraft</item>
        <item>Food</item>
        <item>Beauty</item>
        <item>Clothing</item>
        <item>Fashion-and-Jewellery</item>
        <item>Household</item>
        <item>Others</item>
    </string-array>

</resources>
