<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_products">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.shgseller.ui.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.shgseller.ui.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.shgseller.ui.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_earnings"
        android:name="com.example.shgseller.ui.EarningsFragment"
        android:label="@string/menu_earnings"
        tools:layout="@layout/fragment_earnings" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.shgseller.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />


    <fragment
        android:id="@+id/nav_terms"
        android:name="com.example.shgseller.ui.TCFragment"
        android:label="@string/menu_terms"
        tools:layout="@layout/fragment_tc" />

</navigation>